Fix header on mobile

--- a/css/post.css
+++ b/css/post.css
@@ -1,3 +1,6 @@
+#page-top {
+    padding-top: 0 !important;
+}
 .blog-name {
     font-size: 2rem;
 }
